tests/negative/dave_unknownoutlinetype.opml
<?xml version="1.0" encoding="ISO-8859-1"?><opml version="1.1">	<head>		<title>Unknown outline type</title>		</head>	<body>		<outline text="Who's heard of this type?" type="oy-vey"/>		</body>	</opml>